# mcp-servers

./: .gitignore  README.md
aliyun-help-docs-mcp/: .env.example  README.md  install.sh  pyproject.toml
aliyun-help-docs-mcp/mcp_servers/: __init__.py
aliyun-help-docs-mcp/mcp_servers/aliyun_help_docs/: __init__.py  config.py  server.py
aliyun-help-docs-mcp/mcp_servers/aliyun_help_docs/core/: __init__.py  cache.py  evidence.py  iqs_client.py  url_whitelist.py
aliyun-help-docs-mcp/mcp_servers/aliyun_help_docs/schemas/: evidence_schema.json  input_schemas.json  output_schemas.json
aliyun-help-docs-mcp/mcp_servers/aliyun_help_docs/tools/: __init__.py  read.py  retrieve.py  search.py
cloud-help-docs-mcp/: .env.example  .gitignore  README.md  install.sh  pyproject.toml
cloud-help-docs-mcp/mcp_servers/: __init__.py
cloud-help-docs-mcp/mcp_servers/cloud_help_docs/: __init__.py  config.py  providers.py  server.py
cloud-help-docs-mcp/mcp_servers/cloud_help_docs/core/: __init__.py  cache.py  evidence.py  iqs_client.py  url_whitelist.py
cloud-help-docs-mcp/mcp_servers/cloud_help_docs/schemas/: evidence_schema.json  input_schemas.json  output_schemas.json
cloud-help-docs-mcp/mcp_servers/cloud_help_docs/tools/: __init__.py  read.py  retrieve.py  search.py
cloud-help-docs-mcp/tests/: test_cache.py  test_evidence.py  test_iqs_extract.py  test_search_normalize.py  test_url_whitelist.py
knowledge-base/: MCP_CONFIG.md  README.md  SKILL.md  pyproject.toml
knowledge-base/src/: __init__.py  config.py  server.py
knowledge-base/src/core/: __init__.py  browser_login.py  db.py  directories.py  indexer.py  internal_sites.py  models.py  parsers.py  public_search.py  settings.py  vector_store.py  watcher.py
knowledge-base/src/tools/: __init__.py  ata_search.py  local_search.py  manage.py  public_search.py  yunzhidao_search.py
