[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sa-cloud-advisory-toolkit"
version = "0.1.0"
description = "SA Cloud Advisory Toolkit: a set of MCP servers for Aliyun cloud advisory, AWS mapping, migration assessment and cost estimation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "SA Cloud Advisory Toolkit Authors" },
]
keywords = ["aliyun", "mcp", "cloud-advisory", "iqs", "evidence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.10",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyyaml>=6.0",
]

[project.scripts]
aliyun-help-docs-mcp = "mcp_servers.aliyun_help_docs.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_servers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
