[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-help-docs-mcp"
version = "0.1.0"
description = "Unified MCP server for searching and reading cloud provider documentation (Aliyun, Volcengine, Tencent Cloud, AWS, Azure, GCP)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cloud Help Docs MCP Authors" },
]
keywords = ["mcp", "cloud", "documentation", "aliyun", "aws", "azure", "gcp", "volcengine", "tencent-cloud", "iqs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.10",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyyaml>=6.0",
]

[project.scripts]
cloud-help-docs-mcp = "mcp_servers.cloud_help_docs.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_servers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
